<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<!-- Default alarm -->
	<com.nfcalarmclock.settings.preference.NacPreferenceCategory
		android:title="@string/title_default_alarm">

		<com.nfcalarmclock.card.NacCardPreference
			android:key="@string/key_default_alarm_card"
			app:allowDividerAbove="false"
			app:allowDividerBelow="true"
			/>
	</com.nfcalarmclock.settings.preference.NacPreferenceCategory>

	<!-- Miscellaneous -->
	<com.nfcalarmclock.settings.preference.NacPreferenceCategory
		android:title="@string/title_misc">

		<com.nfcalarmclock.settings.preference.NacSwitchPreference
			android:title="@string/title_toggle_alarms_with_airplane_mode"
			android:key="@string/key_misc_should_toggle_alarms_with_airplane_mode"
			android:summaryOn="@string/description_toggle_alarms_with_airplane_mode_true"
			android:summaryOff="@string/description_toggle_alarms_with_airplane_mode_false"
			android:defaultValue="@bool/default_misc_should_toggle_alarms_with_airplane_mode"
			app:allowDividerAbove="false"
			app:allowDividerBelow="true"
			/>
	</com.nfcalarmclock.settings.preference.NacPreferenceCategory>

</PreferenceScreen>
