<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginBottom="?attr/actionBarSize">

	<!-- Hour -->
	<TextView
		style="@style/Timer.TimeText"
		android:id="@+id/timer_hour"
		android:text="@string/number00"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/timer_numberpad1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/timer_hour_units"
		app:layout_constraintHorizontal_chainStyle="packed"
		/>

	<TextView
		style="@style/Timer.UnitsText"
		android:id="@+id/timer_hour_units"
		android:text="@string/letter_h"
		app:layout_constraintStart_toEndOf="@id/timer_hour"
		app:layout_constraintEnd_toStartOf="@id/timer_minute"
		app:layout_constraintBaseline_toBaselineOf="@id/timer_hour"
		/>

	<!-- Minute -->
	<TextView
		style="@style/Timer.TimeText"
		android:id="@+id/timer_minute"
		android:text="@string/number00"
		app:layout_constraintStart_toEndOf="@id/timer_hour_units"
		app:layout_constraintEnd_toStartOf="@id/timer_minute_units"
		app:layout_constraintBaseline_toBaselineOf="@id/timer_hour"
		/>

	<TextView
		style="@style/Timer.UnitsText"
		android:id="@+id/timer_minute_units"
		android:text="@string/letter_m"
		app:layout_constraintStart_toEndOf="@id/timer_minute"
		app:layout_constraintEnd_toStartOf="@id/timer_seconds"
		app:layout_constraintBaseline_toBaselineOf="@id/timer_minute"
		/>

	<!-- Seconds -->
	<TextView
		style="@style/Timer.TimeText"
		android:id="@+id/timer_seconds"
		android:text="@string/number00"
		app:layout_constraintStart_toEndOf="@id/timer_minute_units"
		app:layout_constraintEnd_toStartOf="@id/timer_seconds_units"
		app:layout_constraintBaseline_toBaselineOf="@id/timer_hour"
		/>

	<TextView
		style="@style/Timer.UnitsText"
		android:id="@+id/timer_seconds_units"
		android:layout_marginEnd="@dimen/zero"
		android:text="@string/letter_s"
		app:layout_constraintStart_toEndOf="@id/timer_seconds"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBaseline_toBaselineOf="@id/timer_seconds"
		/>

	<!-- Number pad 1-3 -->
	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad1"
		android:text="@string/number1"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/timer_numberpad4"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad2"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintVertical_chainStyle="packed"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad2"
		android:text="@string/number2"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad1"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad1"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad1"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad3"
		app:layout_constraintVertical_chainStyle="packed"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad3"
		android:text="@string/number3"
		app:cornerRadius="100dp"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad1"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad1"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintVertical_chainStyle="packed"
		/>

	<!-- Number pad 4-6 -->
	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad4"
		android:text="@string/number4"
		app:layout_constraintTop_toBottomOf="@id/timer_numberpad1"
		app:layout_constraintBottom_toTopOf="@id/timer_numberpad7"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad5"
		app:layout_constraintHorizontal_chainStyle="packed"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad5"
		android:text="@string/number5"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad4"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad4"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad4"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad6"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad6"
		android:text="@string/number6"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad4"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad4"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad5"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<!-- Number pad 7-9 -->
	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad7"
		android:text="@string/number7"
		app:layout_constraintTop_toBottomOf="@id/timer_numberpad4"
		app:layout_constraintBottom_toTopOf="@id/timer_numberpad_invis"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad8"
		app:layout_constraintHorizontal_chainStyle="packed"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad8"
		android:text="@string/number8"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad7"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad7"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad7"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad9"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad9"
		android:text="@string/number9"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad7"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad7"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad8"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<!-- Number pad 0-del -->
	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad_invis"
		android:text=""
		android:visibility="invisible"
		app:layout_constraintTop_toBottomOf="@id/timer_numberpad7"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad0"
		app:layout_constraintHorizontal_chainStyle="packed"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad0"
		android:text="@string/number0"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad_invis"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad_invis"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad_invis"
		app:layout_constraintEnd_toStartOf="@id/timer_numberpad_del"
		/>

	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_numberpad_del"
		app:iconGravity="textStart"
		app:iconPadding="@dimen/zero"
		app:iconSize="@dimen/isz_normal"
		app:icon="@drawable/backspace_32"
		app:layout_constraintTop_toTopOf="@id/timer_numberpad_invis"
		app:layout_constraintBottom_toBottomOf="@id/timer_numberpad_invis"
		app:layout_constraintStart_toEndOf="@id/timer_numberpad0"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<!-- Start timer -->
	<com.google.android.material.button.MaterialButton
		style="@style/Timer.NumberpadButton"
		android:id="@+id/timer_start"
		android:layout_marginTop="@dimen/zero"
		android:layout_marginBottom="@dimen/zero"
		android:backgroundTint="?attr/colorAccent"
		app:iconPadding="@dimen/zero"
		app:iconGravity="textStart"
		app:iconSize="@dimen/isz_xxxlarge"
		app:icon="@drawable/play"
		app:layout_constraintTop_toBottomOf="@id/timer_numberpad_del"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<!-- More button -->
	<com.google.android.material.button.MaterialButton
		style="@style/Widget.Material3.Button.TextButton"
		android:id="@+id/timer_more_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:alpha="0.4"
		android:textSize="@dimen/tsz_small"
		android:text="@string/word_more"
		app:iconPadding="@dimen/zero"
		app:iconGravity="top"
		app:iconSize="@dimen/isz_xlarge"
		app:icon="@drawable/collapse"
		app:layout_constraintTop_toTopOf="@id/timer_start"
		app:layout_constraintBottom_toBottomOf="@id/timer_start"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<!-- Navigation host -->
	<androidx.fragment.app.FragmentContainerView
		android:id="@+id/options_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:name="androidx.navigation.fragment.NavHostFragment"
		app:defaultNavHost="true"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>
