<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingStart="?dialogPreferredPadding"
	android:paddingEnd="?dialogPreferredPadding"
	android:orientation="vertical">

	<TextView
		style="@style/Widget.TextView.Primary"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/normal"
		android:layout_marginBottom="@dimen/normal"
		android:text="@string/message_playlist"
		/>

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/shuffle_media_checkbox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/action_shuffle_music"
		/>

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/recursively_play_media_checkbox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/action_recursively_play_media"
		/>

</LinearLayout>
